// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfilePhoto /> renders custom size 1`] = `
<div
  className="regular_i5aehb-o_O-inline-0_x9m9b"
>
  <img
    alt="Name"
    className="image_qfr8ll-o_O-regular_i5aehb-o_O-roundedImage_1bpjyj1-o_O-inline-0_x9m9b"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders inline 1`] = `
<div
  className="inline_36rlri-o_O-regular_i5aehb"
>
  <img
    alt="Name"
    className="image_qfr8ll-o_O-regular_i5aehb-o_O-roundedImage_1bpjyj1"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders large 1`] = `
<div
  className="regular_i5aehb-o_O-large_1kuwd2n"
>
  <img
    alt="Name"
    className="image_qfr8ll-o_O-regular_i5aehb-o_O-roundedImage_1bpjyj1-o_O-large_1kuwd2n"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders macro 1`] = `
<div
  className="regular_i5aehb-o_O-macro_137gz1r"
>
  <img
    alt="Name"
    className="image_qfr8ll-o_O-regular_i5aehb-o_O-roundedImage_1bpjyj1-o_O-macro_137gz1r"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders small 1`] = `
<div
  className="regular_i5aehb-o_O-small_n3ao3z"
>
  <img
    alt="Name"
    className="image_qfr8ll-o_O-regular_i5aehb-o_O-roundedImage_1bpjyj1-o_O-small_n3ao3z"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders with the expected props (but not necessarily with the expected styles) 1`] = `
<div
  className="regular_i5aehb"
>
  <img
    alt="Name"
    className="image_qfr8ll-o_O-regular_i5aehb-o_O-roundedImage_1bpjyj1"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;
